projects/blinky/log
/usr/local/gcc-arm-none-eabi-9-2020-q2-update/bin//arm-none-eabi-gcc -O3 -g3 -std=c99  -MP -MD  -DBOARD_PCA10059 -DBSP_DEFINES_ONLY -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DMBR_PRESENT -DNRF52840_XXAA -mcpu=cortex-m4 -mthumb -mabi=aapcs -Wall -Werror -mfloat-abi=hard -mfpu=fpv4-sp-d16 -ffunction-sections -fdata-sections -fno-strict-aliasing -fno-builtin -fshort-enums -I/home/user/ESTC2021_course/ESTC2021-project/ -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/boards -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/drivers_nrf/nrf_soc_nosd -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/atomic -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/atomic_fifo -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/balloc -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/bsp -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/button -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/delay -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/experimental_section_vars -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/log -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/log/src -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/memobj -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/ringbuf -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/sortlist -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/strerror -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/timer -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/timer -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/usbd -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/usbd/class -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/usbd/class/cdc -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/usbd/class/cdc/acm -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/libraries/util -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/softdevice/mbr/headers -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/components/toolchain/cmsis/include -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/external/fprintf -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/external/utf_converter -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/integration/nrfx -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/integration/nrfx/legacy -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/modules/nrfx -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/modules/nrfx/drivers/include -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/modules/nrfx/hal -I/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/modules/nrfx/mdk  -D__HEAP_SIZE=8192 -D__STACK_SIZE=8192  -o _build/obj/logger.c.o  -c logger.c 
In file included from /home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/modules/nrfx/drivers/include/nrfx_clock.h:46,
                 from /home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/integration/nrfx/legacy/nrf_drv_clock.h:43,
                 from logger.c:5:
/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/modules/nrfx/drivers/include/nrfx_power_clock.h: In function 'nrfx_power_clock_irq_init':
/home/user/ESTC2021_course/ESTC2021-project//ESTC-NSDK/modules/nrfx/drivers/include/nrfx_power_clock.h:67:6: error: #error "This code is not supposed to be compiled when neither POWER nor CLOCK is enabled."
   67 |     #error "This code is not supposed to be compiled when neither POWER nor CLOCK is enabled."
      |      ^~~~~
At top level:
logger.c:43:13: error: 'usbd_init' defined but not used [-Werror=unused-function]
   43 | static void usbd_init(void)
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Makefile:54: recipe for target '_build/obj/logger.c.o' failed
make: *** [_build/obj/logger.c.o] Error 1
